@@ -1,3 +1,8 @@
+2005-10-14  Ross Burton  <ross@burtonini.com>
+
+	* settings-daemon.c:
+	Relocate all GConf keys to /desktop/poky.
+
 2005-10-03  Ross Burton  <ross@burtonini.com>
 
 	* settings-daemon.c:
